# eni-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  conan_provider.cmake  conandata.yml  conanfile.txt  vcpkg.json
cmake/: dependency-versions.cmake  eni-build.cmake  eni-embed-binary.cmake  eni-util.cmake  fde-build.cmake
eni-common/: CMakeLists.txt  README.md
eni-common/eni/: EventDispatcher.h  Exception.cpp  Exception.h  Interceptor.h  ManagedObject.h  Varying.cpp  Varying.h  algorithm.h  build_config.h  concepts.h  debug.cpp  debug.h  exception.cpp  exception.h  fs_utils.cpp  fs_utils.h  iterator.h  logging.cpp  logging.h  math.h  memory.h  stringify.h  strings.cpp  strings.h  type_traits.h  types.h  util.cpp  util.h
eni-common/eni/algorithm/: erase_pointer.h  tuple.h
eni-common/eni/concepts/: container.h  iterable.h  pointer.h  variadic.h
eni-common/eni/memory/: make_unique_container.h
eni-common/tests/: AlgorithmTests.cpp  ConceptsTests.cpp  EventDispatcherTests.cpp  InterceptorTests.cpp  IteratorTests.cpp  MathTests.cpp  MemoryTests.cpp  StringifyTests.cpp  TypeTraitsTests.cpp  UtilTests.cpp
eni-common/tests/embed_data_test/: CMakeLists.txt  testdata.txt
eni-math/: CMakeLists.txt
eni-math/eni/: math.cpp  math.h
eni-math/eni/math/: AspectRatio.h  BoundingBox.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Rect2.h  Scale2D.cpp  Scale2D.h  Vec2.h  Vec3.h  Vec4.h
eni-math/tests/: BoundingBoxTests.cpp  MathTests.cpp  QuaternionTests.cpp  VectorTests.cpp
eni-spatial/: CMakeLists.txt
eni-spatial/eni/spatial/: AspectRatio.h  BoundingBox2.h  Rect2.h  Vec2.h  Vec3.h  Vec4.h
fde-core/: CMakeLists.txt
fde-core/fde/: Engine.cpp  Engine.h  EngineObject.h  EngineReference.h  Node.cpp  Node.h  Schema.cpp  Schema.h  Topic.cpp  Topic.h  schemapush.h
fde-core/tests/: EngineTests.cpp
